# Diegod-O-Caminho-da-Goiaba

./: README.md  diegod.cabal  stack.yaml
Haskell/: diegod.cabal
Prolog/: Assets.pl  Bodies.pl  Bodys.pl  Dado.pl  Events.pl  Handler.pl  Main.pl  Menu.pl  Play.pl  Pontuacao.pl  Position.pl  PowerUps.pl  Rendler.pl  cenarios.txt
app/: Main.hs
src/: Controls.hs  Diegod.hs  UI.hs
